<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Philips Hue</string>
    <string name="title_lamp_detail">Lamp Detail</string>
    <string name="label_CurrentColor">Huidige kleur</string>
    <string name="label_NewColor">Nieuwe kleur</string>
    <string name="button_setColor">Stel kleur in</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>

</resources>
